# lq-mgr

./: .env.example  __main__.py  cli.py  setup.cfg  setup.py
lq_mgr/: __main__.py  cli.py  manager.py
