[metadata]
name = liqpay-manager
url = https://github.com/webknjaz/lq-mgr
author = Sviatoslav Sydorenko
author_email = wk+github-open-source@sydorenko.org.ua
description = Truly Pythonic CLI for managing LiqPay via its API
long_description = It currently supports only transactions list and unsubscribe
license = MIT
keywords =
    CLI
    tool
    API
    client
    LiqPay
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.6
install_requires =
    click
    envparse
    liqpay-python3
include_package_data = True
packages = find:
packages_dir = 
    = .

[options.entry_points]
console_scripts =
    liqpay-cli = lq_mgr.cli:main
